# GpuDrivenSkeletalAnimationPipeline

./: CMakeLists.txt  README.md
demo_asset_data/: demo_human_10-20.json  demo_layer20_40.json  demo_layer40_80.json  testDemo1.json  testDemo_full.json  testDemo_full_bone.json  testDemo_full_mesh.json  weeping_tree.json
demo_asset_data/floor/: floor.material  floorbox.lmesh  metallic_1.dds
demo_asset_data/shader/animation_simulation/: animation_simulation.hlsl  generate_pose.hlsl  local_to_world_kiyavash.hlsl  local_to_world_merge.hlsl  local_to_world_prefix.hlsl  local_to_world_prefix2.hlsl  local_to_world_prefix3.hlsl  local_to_world_prefix4.hlsl  local_to_world_samuel.hlsl  skeleton_block_combine.hlsl  skin_simulation.hlsl
demo_asset_data/shader/draw/: floor_vertex_trans.hlsl  globel_header.hlsl  pbr_draw.hlsl  skin_vertex_trans.hlsl  sky_draw.hlsl  static_vertex_trans.hlsl
demo_asset_data/skeletal_mesh_demo/dragon1/: dragon1.lskelanimclip  dragon1.lskeleton  dragon1.lskelmesh
demo_asset_data/skeletal_mesh_demo/dragon2/: dragon2.lskelanimclip  dragon2.lskeleton  dragon2.lskelmesh
demo_asset_data/skeletal_mesh_demo/lion3/: lion3.material
demo_asset_data/skeletal_mesh_demo/runman/: base.dds  complex_human_run.lskelanimclip  complex_human_run.lskeleton  complex_human_run.lskelmesh  complex_human_run.material
demo_asset_data/skeletal_mesh_demo/treetest210/: tree_test_210.lskeleton  tree_test_210.lskelmesh
demo_asset_data/skeletal_mesh_demo/treetest240/: tree_test_240.lskelanimclip  tree_test_240.lskeleton  tree_test_240.lskelmesh
demo_asset_data/skeletal_mesh_demo/treetest320/: tree_test_320.lskelanimclip  tree_test_320.lskeleton  (+1 more)
demo_main/: CMakeLists.txt  application_demo.cpp  application_demo.h  camera.cpp  camera.h  demo_main.cpp  demo_main.h  globel_device_value.cpp  globel_device_value.h  gpu_resource_helper.cpp  gpu_resource_helper.h  model_mesh.cpp  model_mesh.h  skeletal_animation.cpp  skeletal_animation.h  sky_box.cpp  sky_box.h
directx_help/: CMakeLists.txt  GenerateMips_main.inc
imgui/: CMakeLists.txt
(+3 files in other folders)
